--- a/SplaShooter.vcxproj.filters
+++ b/SplaShooter.vcxproj.filters
@@ -5,10 +5,6 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="ヘッダー ファイル">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="リソース ファイル">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -48,6 +44,9 @@
     </Filter>
     <Filter Include="ソース ファイル\Game\Base">
       <UniqueIdentifier>{dc70d767-6f92-4ed9-8e6f-3d42b184b4f2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Game\Engine">
+      <UniqueIdentifier>{7bdafe69-6b0c-4eeb-8ac6-38762f38210d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -108,6 +107,12 @@
     <ClCompile Include="TestField.cpp">
       <Filter>ソース ファイル\Test</Filter>
     </ClCompile>
+    <ClCompile Include="Engine.cpp">
+      <Filter>ソース ファイル\Game\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Prefabs.cpp">
+      <Filter>ソース ファイル\Game\Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Effect.h">
@@ -167,27 +172,36 @@
     <ClInclude Include="GameObject.h">
       <Filter>ソース ファイル\Game\Base</Filter>
     </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>ソース ファイル\Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine.h">
+      <Filter>ソース ファイル\Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Prefabs.h">
+      <Filter>ソース ファイル\Game\Engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Asset\Shader\MappingVS.hlsl">
-      <Filter>リソース ファイル\Shader\Vertex</Filter>
-    </FxCompile>
-    <FxCompile Include="Asset\Shader\MappingPS.hlsl">
+    <FxCompile Include="MappingPS.hlsl">
       <Filter>リソース ファイル\Shader\Pixel</Filter>
     </FxCompile>
-    <FxCompile Include="Asset\Shader\pixelShader.hlsl">
-      <Filter>リソース ファイル\Shader\Pixel</Filter>
-    </FxCompile>
-    <FxCompile Include="Asset\Shader\vertexShader.hlsl">
+    <FxCompile Include="MappingVS.hlsl">
       <Filter>リソース ファイル\Shader\Vertex</Filter>
     </FxCompile>
-    <FxCompile Include="Asset\Shader\waterVS.hlsl">
-      <Filter>リソース ファイル\Shader\Vertex</Filter>
-    </FxCompile>
-    <FxCompile Include="Asset\Shader\waterPS.hlsl">
+    <FxCompile Include="pixelShader.hlsl">
       <Filter>リソース ファイル\Shader\Pixel</Filter>
     </FxCompile>
-    <FxCompile Include="Asset\Shader\Common.hlsl" />
+    <FxCompile Include="vertexShader.hlsl">
+      <Filter>リソース ファイル\Shader\Vertex</Filter>
+    </FxCompile>
+    <FxCompile Include="waterPS.hlsl">
+      <Filter>リソース ファイル\Shader\Pixel</Filter>
+    </FxCompile>
+    <FxCompile Include="waterVS.hlsl">
+      <Filter>リソース ファイル\Shader\Vertex</Filter>
+    </FxCompile>
+    <FxCompile Include="Common.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ToDoList.txt" />
