Object3Dクラスの修正。

--- a/SplaShooter.vcxproj.filters
+++ b/SplaShooter.vcxproj.filters
@@ -174,12 +174,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="MappingPS.hlsl">
-      <Filter>リソース ファイル\Shader\Pixel</Filter>
-    </FxCompile>
-    <FxCompile Include="MappingVS.hlsl">
-      <Filter>リソース ファイル\Shader\Vertex</Filter>
-    </FxCompile>
     <FxCompile Include="pixelShader.hlsl">
       <Filter>リソース ファイル\Shader\Pixel</Filter>
     </FxCompile>
@@ -193,6 +187,8 @@
       <Filter>リソース ファイル\Shader\Vertex</Filter>
     </FxCompile>
     <FxCompile Include="Common.hlsl" />
+    <FxCompile Include="MappingVS.hlsl" />
+    <FxCompile Include="MappingPS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ToDoList.txt" />
