--- a/SplaShooter.vcxproj
+++ b/SplaShooter.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Effect.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Fps.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="InputDevice.cpp" />
     <ClCompile Include="Loader.cpp" />
     <ClCompile Include="main.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Fps.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Input.h" />
     <ClInclude Include="InputDevice.h" />
     <ClInclude Include="Loader.h" />
     <ClInclude Include="Manager.h" />
