--- a/SplaShooter.vcxproj.filters
+++ b/SplaShooter.vcxproj.filters
@@ -110,11 +110,11 @@
     <ClCompile Include="Input.cpp">
       <Filter>ソース ファイル\System</Filter>
     </ClCompile>
+    <ClCompile Include="Polygon3D.cpp">
+      <Filter>ソース ファイル\Game\3D</Filter>
+    </ClCompile>
     <ClCompile Include="field.cpp">
       <Filter>ソース ファイル\Test</Filter>
-    </ClCompile>
-    <ClCompile Include="Polygon.cpp">
-      <Filter>ソース ファイル\Game\3D</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -178,11 +178,11 @@
     <ClInclude Include="Input.h">
       <Filter>ソース ファイル\System</Filter>
     </ClInclude>
-    <ClInclude Include="field.h">
-      <Filter>ソース ファイル\Test</Filter>
-    </ClInclude>
     <ClInclude Include="Polygon3D.h">
       <Filter>ソース ファイル\Game\3D</Filter>
+    </ClInclude>
+    <ClInclude Include="field.h">
+      <Filter>ソース ファイル\Test</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -201,15 +201,9 @@
     <FxCompile Include="Common.hlsl" />
     <FxCompile Include="MappingVS.hlsl" />
     <FxCompile Include="MappingPS.hlsl" />
-    <FxCompile Include="normalMappingPS.hlsl" />
-    <FxCompile Include="normalMappingVS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ToDoList.txt" />
     <Text Include="memo.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="normalMappingPS.cso" />
-    <None Include="normalMappingVS.cso" />
   </ItemGroup>
 </Project>
