--- a/SplaShooter.vcxproj.filters
+++ b/SplaShooter.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClCompile Include="Polygon3D.cpp">
       <Filter>ソース ファイル\Game\3D</Filter>
     </ClCompile>
+    <ClCompile Include="AnimationModel.cpp">
+      <Filter>ソース ファイル\System</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Effect.h">
@@ -169,6 +172,9 @@
     <ClInclude Include="Polygon3D.h">
       <Filter>ソース ファイル\Game\3D</Filter>
     </ClInclude>
+    <ClInclude Include="AnimationModel.h">
+      <Filter>ソース ファイル\System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="pixelShader.hlsl">
@@ -192,9 +198,5 @@
     <FxCompile Include="Common.hlsl">
       <Filter>リソース ファイル\Shader</Filter>
     </FxCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="ToDoList.txt" />
-    <Text Include="memo.txt" />
   </ItemGroup>
 </Project>
