--- a/SplaShooter.vcxproj.filters
+++ b/SplaShooter.vcxproj.filters
@@ -107,11 +107,14 @@
     <ClCompile Include="Polygon3D.cpp">
       <Filter>ソース ファイル\Game\3D</Filter>
     </ClCompile>
-    <ClCompile Include="AnimationModel.cpp">
-      <Filter>ソース ファイル\System</Filter>
-    </ClCompile>
     <ClCompile Include="Model.cpp">
       <Filter>ソース ファイル\Game\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Test.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimationModel.cpp">
+      <Filter>ソース ファイル\System</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -175,11 +178,15 @@
     <ClInclude Include="Polygon3D.h">
       <Filter>ソース ファイル\Game\3D</Filter>
     </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>ソース ファイル\Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Test.h" />
     <ClInclude Include="AnimationModel.h">
       <Filter>ソース ファイル\System</Filter>
     </ClInclude>
-    <ClInclude Include="Model.h">
-      <Filter>ソース ファイル\Game\Engine</Filter>
+    <ClInclude Include="Actor.h">
+      <Filter>ソース ファイル\Game\Base</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
