--- a/SplaShooter.vcxproj.filters
+++ b/SplaShooter.vcxproj.filters
@@ -45,6 +45,12 @@
     <Filter Include="ソース ファイル\Game\Engine">
       <UniqueIdentifier>{7bdafe69-6b0c-4eeb-8ac6-38762f38210d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Engine\Model">
+      <UniqueIdentifier>{070130b3-f7ef-4fd7-8fe4-7d96b072c4aa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Game\Engine\Loader">
+      <UniqueIdentifier>{8d600092-e4cc-45f0-8819-f5bd69fe7ef5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp">
@@ -98,23 +104,23 @@
     <ClCompile Include="Prefabs.cpp">
       <Filter>ソース ファイル\Game\Engine</Filter>
     </ClCompile>
-    <ClCompile Include="Loader.cpp">
-      <Filter>ソース ファイル\Game\Engine</Filter>
-    </ClCompile>
     <ClCompile Include="Input.cpp">
       <Filter>ソース ファイル\System</Filter>
     </ClCompile>
     <ClCompile Include="Polygon3D.cpp">
       <Filter>ソース ファイル\Game\3D</Filter>
     </ClCompile>
-    <ClCompile Include="Model.cpp">
-      <Filter>ソース ファイル\Game\Engine</Filter>
-    </ClCompile>
     <ClCompile Include="Test.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="AnimationModel.cpp">
-      <Filter>ソース ファイル\System</Filter>
+      <Filter>ソース ファイル\Game\Engine\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Model.cpp">
+      <Filter>ソース ファイル\Game\Engine\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Loader.cpp">
+      <Filter>ソース ファイル\Game\Engine\Loader</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -169,24 +175,24 @@
     <ClInclude Include="Prefabs.h">
       <Filter>ソース ファイル\Game\Engine</Filter>
     </ClInclude>
-    <ClInclude Include="Loader.h">
-      <Filter>ソース ファイル\Game\Engine</Filter>
-    </ClInclude>
     <ClInclude Include="Input.h">
       <Filter>ソース ファイル\System</Filter>
     </ClInclude>
     <ClInclude Include="Polygon3D.h">
       <Filter>ソース ファイル\Game\3D</Filter>
     </ClInclude>
-    <ClInclude Include="Model.h">
-      <Filter>ソース ファイル\Game\Engine</Filter>
-    </ClInclude>
     <ClInclude Include="Test.h" />
-    <ClInclude Include="AnimationModel.h">
-      <Filter>ソース ファイル\System</Filter>
-    </ClInclude>
     <ClInclude Include="Actor.h">
       <Filter>ソース ファイル\Game\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="AnimationModel.h">
+      <Filter>ソース ファイル\Game\Engine\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>ソース ファイル\Game\Engine\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Loader.h">
+      <Filter>ソース ファイル\Game\Engine\Loader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
